fix contrast issue on stack list

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ nav .menu_icon {
 .work_desc li {
   font-size: 12px;
   font-weight: 500;
-  color: #6070ff;
+  color: #604bff;
   background-color: #ebebff;
   padding: 4px 12px;
   border-radius: 8px;
